feat(ui): agregar Button base en @bound/ui

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,6 +1,6 @@
 {
   "*.{ts,tsx}": [
-    "eslint --fix",
+    "eslint -c eslint.config.mjs --parser @typescript-eslint/parser --ext .ts,.tsx --fix",
     "prettier --write"
   ],
   "*.json,*.css,*.md": [
