chore(monorepo): actualizar deps/link de workspaces, lockfile y .gitignore (ignorar node_modules)

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -2,5 +2,8 @@
   "name": "@bound/api",
   "private": true,
   "version": "0.0.0",
-  "description": "API de Bound - placeholder"
+  "description": "API de Bound - placeholder",
+  "devDependencies": {
+    "@bound/config": "workspace:*"
+  }
 }
