--- a/package.json
+++ b/package.json
@@ -6,17 +6,14 @@
   "scripts": {
     "// info": "Comandos raíz. Los filtros apuntarán a apps cuando existan",
     "prepare": "husky",
-
     "dev:web": "pnpm --filter @bound/web dev",
     "build:web": "pnpm --filter @bound/web build",
     "start:web": "pnpm --filter @bound/web start",
-
     "dev:api": "pnpm --filter @bound/api dev",
     "build:api": "pnpm --filter @bound/api build",
     "start:api": "pnpm --filter @bound/api start",
-
     "lint": "pnpm -r lint",
-    "typecheck": "pnpm -r typecheck",
+    "typecheck": "pnpm -r --filter=!@bound/config exec tsc -p tsconfig.json --noEmit",
     "format": "pnpm -r format",
     "test": "pnpm -r test"
   },
@@ -24,5 +21,18 @@
     "node": ">=20",
     "pnpm": ">=8"
   },
-  "packageManager": "pnpm@10.12.4"
+  "packageManager": "pnpm@10.12.4",
+  "devDependencies": {
+    "@eslint/js": "^9.32.0",
+    "@typescript-eslint/eslint-plugin": "^8.39.0",
+    "@typescript-eslint/parser": "^8.39.0",
+    "eslint": "^9.32.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "globals": "^16.3.0",
+    "husky": "9.1.7",
+    "lint-staged": "^16.1.4",
+    "prettier": "^3.6.2",
+    "typescript": "^5.9.2"
+  }
 }
