--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -7,5 +7,8 @@
   "exports": {
     ".": "./src/index.ts"
   },
-  "types": "./src/index.ts"
+  "types": "./src/index.ts",
+  "devDependencies": {
+    "@bound/config": "workspace:*"
+  }
 }
