feat(web): rutas /login y /onboarding + config Playwright; chore: ignore test-results

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,8 @@ yarn-debug.log*
 # OS
 .DS_Store
 *.tsbuildinfo
+
+# Playwright artifacts
+apps/web/test-results/
+apps/web/playwright-report/
+apps/web/blob-report/
