--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -6,10 +6,22 @@
       "@/*": [
         "src/*"
       ]
-    }
+    },
+    "allowJs": true,
+    "incremental": true,
+    "esModuleInterop": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
   "include": [
     "next-env.d.ts",
-    "src"
+    "src",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
   ]
 }
