--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,10 +4,22 @@
   "version": "0.0.0",
   "description": "App web (Next.js) de Bound - placeholder",
   "devDependencies": {
-    "@bound/config": "workspace:*"
+    "@bound/config": "workspace:*",
+    "@playwright/test": "^1.54.2",
+    "@types/node": "^24.2.0",
+    "@types/react": "^19.1.9"
   },
   "dependencies": {
     "@bound/types": "workspace:*",
-    "@bound/utils": "workspace:*"
+    "@bound/utils": "workspace:*",
+    "next": "15.4.6",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
+  },
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "test:e2e": "playwright test --project=chromium --reporter=line"
   }
 }
