--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,8 +6,11 @@
   "devDependencies": {
     "@bound/config": "workspace:*",
     "@playwright/test": "^1.54.2",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^24.2.0",
-    "@types/react": "^19.1.9"
+    "@types/react": "^19.1.9",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11"
   },
   "dependencies": {
     "@bound/types": "workspace:*",
